--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 
 <html>
   <HEAD>
-    <h2> Testing <h2>
+    <head>
+      <img src ="WebBanner.png" alt="Banner" width ="900" height = "300">
+      <h2>  </h2>
+    </head>
   </HEAD>
+    
 </html>
