--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <hr>
     </head>
     <!style for tables>
+    <head>
       <style>
         table {
           font-family: arial, sans-serif;
@@ -39,6 +40,7 @@
         margin-left: 250px;
       }
     </style>
+    </head>
   </HEAD>
 
 <link rel="stylesheet" 
