--- a/index.html
+++ b/index.html
@@ -10,7 +10,37 @@
       <h2 style=”fontfamily:calibri:”><b>Conference paper: Bridge Deck Repairs</b></h2> 
       <hr>
     </head>
-  
+    <!style for tables>
+    <head>
+      <style>
+        table {
+          font-family: arial, sans-serif;
+          border-collapse: collapse;
+          width: 30%;
+
+        }
+
+        td,th {
+          border: 1px solid #dddddd;
+          text-align: left;
+          padding: 8px;
+        }
+
+        tr:nth-child(even) {
+          background-colour: #dddddd;
+        }
+
+
+
+        
+      </style>
+
+    <style>
+      p.ex1 {
+        margin-left: 250px;
+      }
+    </style>
+    </head>
   </HEAD>
 
 <link rel="stylesheet" 
