--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
         }
 
 
-
         
       </style>
 
@@ -42,8 +41,10 @@
     </style>
     </head>
   </HEAD>
-
-<link rel="stylesheet" 
-href="https://www.w3schools.com/w3css/4/w3.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<style>
+.mySlides {display:none;}
+</style>
 
 </html>
