--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
       p.ex1 {
         margin-left: 250px;
       }
+      p.ex1{
+        margin-right:250px;
+      }
     </style>
   </HEAD>
   
