--- a/index.html
+++ b/index.html
@@ -59,7 +59,11 @@
 
   <p class="ex1">
     <pre>
-      This paper presents a novel adaptove active learning strategy. The most accurate classification model from a heterogeneous classifier pool is selected at each learning epoch. Our goal is to achieve greater incremental improvement in accuracy, compared to using a single type of classification model throughout the process. The strategy is evaluated on benchmark data sets. We further consider an application to texture classification probelms in sonar mosiac imagery and compare it with non-adaptive active learning and traditional machine learning approaches. Our results show that... We conclude that...
+      This paper presents a novel adaptove active learning strategy. The most accurate classification model from a heterogeneous
+      classifier pool is selected at each learning epoch. Our goal is to achieve greater incremental improvement in accuracy, compared
+      to using a single type of classification model throughout the process. The strategy is evaluated on benchmark data sets.
+      We further consider an application to texture classification probelms in sonar mosiac imagery and compare it with non-adaptive
+      active learning and traditional machine learning approaches. Our results show that... We conclude that...
     </pre>
 </p>
   
