--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 </p>
   
   <hr>
-    <h2 id="Introduction">Introduction</h2>
+    <h3 id="Introduction">Introduction</h2>
   </hr>
 
   <p class="ex2">
@@ -111,4 +111,9 @@ classifier confidence to drop, as in Vlachos (2008).”
       <td><a href="#References">References</a></td>
     </tr>
   </table>
+
+<hr>
+  <h2>Analysis and discussion</h2>
+</hr>
+  
 </html>
