--- a/index.html
+++ b/index.html
@@ -116,5 +116,8 @@ classifier confidence to drop, as in Vlachos (2008).”
 <hr>
   <h2>Analysis and discussion</h2>
 </hr>
-  
+
+  <pre>
+    "Bride deck repair durability is the ubject of much recent research such as in <u>Toshihiko et al (2023).</u> Table 1: Data on cost and lifespan of brige repairs"
+  </pre>
 </html>
