--- a/index.html
+++ b/index.html
@@ -118,6 +118,41 @@ classifier confidence to drop, as in Vlachos (2008).”
 </hr>
 
   <pre>
-    "Bride deck repair durability is the ubject of much recent research such as in <u>Toshihiko et al (2023).</u> Table 1: Data on cost and lifespan of brige repairs"
+    Bride deck repair durability is the ubject of much recent research such as in <u>Toshihiko et al (2023).</u> Table 1: Data on cost and lifespan of brige repairs
   </pre>
+
+  <table>
+
+    <tr>
+      <th><b>£ Cost of Repairs</b></th>
+      <th><b>Lifespan of repairs (years)</b></th>
+      
+    </tr>
+    <tr>
+      <th>0.7m</th>
+      <th>2</th>
+    </tr>
+    <tr>
+      <th>3.3m</th>
+      <th>4</th>
+    </tr>
+    <tr>
+      <th>2.6></th>
+      <th>5</th>
+    </tr>
+    <tr>
+      <th>17.4</th>
+      <th>7</th>
+    </tr>
+    <tr>
+      <th>8.8</th>
+      <th>9</th>
+    </tr>
+  </table>
+
+  <pre>
+    Fromatting some equations using MathML x<sub>2</sub> + 4x + 4 = 0
+  </pre>
+
+  
 </html>
