--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ classifier confidence to drop, as in Vlachos (2008).”
 
 
 <hr>
-  <h2>Analysis and discussion</h2>
+  <h2 id ="Analysis and discussion">Analysis and discussion</h2>
 </hr>
 
   <pre>
