--- a/index.html
+++ b/index.html
@@ -118,14 +118,14 @@ classifier confidence to drop, as in Vlachos (2008).”
 </hr>
 
   <pre>
-    Bride deck repair durability is the ubject of much recent research such as in <u>Toshihiko et al (2023).</u> Table 1: Data on cost and lifespan of brige repairs
+    Bridge deck repair durability is the ubject of much recent research such as in <u>Toshihiko et al (2023).</u> Table 1: Data on cost and lifespan of brige repairs
   </pre>
 
   <table>
 
     <tr>
-      <th><b>£ Cost of Repairs</b></th>
-      <th><b>Lifespan of repairs (years)</b></th>
+      <h><b>£ Cost of Repairs</b></h>
+      <h><b>Lifespan of repairs (years)</b></h>
       
     </tr>
     <tr>
@@ -154,5 +154,6 @@ classifier confidence to drop, as in Vlachos (2008).”
     Fromatting some equations using MathML x<sub>2</sub> + 4x + 4 = 0
   </pre>
 
-  
+<hr>
+</hr>
 </html>
