--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ classifier confidence to drop, as in Vlachos (2008).”
   </table>
 
   <pre>
-    Fromatting some equations using MathML x<sub>2</sub> + 4x + 4 = 0
+    Fromatting some equations using MathML x<sup>2</sup> + 4x + 4 = 0
   </pre>
 
 <hr>
