--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@ classifier confidence to drop, as in Vlachos (2008).”
   <table>
 
     <tr>
-      <h><b>£ Cost of Repairs</b></h>
-      <h><b>Lifespan of repairs (years)</b></h>
+      <th><b>£ Cost of Repairs</b></th>
+      <th><b>Lifespan of repairs (years)</b></th>
       
     </tr>
     <tr>
