--- a/index.html
+++ b/index.html
@@ -129,30 +129,30 @@ classifier confidence to drop, as in Vlachos (2008).”
       
     </tr>
     <tr>
-      <th>0.7m</th>
-      <th>2</th>
+      <td>0.7m</td>
+      <td>2</td>
     </tr>
     <tr>
-      <th>3.3m</th>
-      <th>4</th>
+      <td>3.3m</td>
+      <td>4</td>
     </tr>
     <tr>
-      <th>2.6></th>
-      <th>5</th>
+      <td>2.6></td>
+      <td>5</td>
     </tr>
     <tr>
-      <th>17.4</th>
-      <th>7</th>
+      <td>17.4</td>
+      <td>7</td>
     </tr>
     <tr>
-      <th>8.8</th>
-      <th>9</th>
+      <td>8.8</td>
+      <td>9</td>
     </tr>
   </table>
 
-  <pre>
-    Fromatting some equations using MathML x<sup>2</sup> + 4x + 4 = 0
-  </pre>
+  <h>
+    Formatting some equations using MathML x<sup>2</sup> + 4x + 4 = 0
+  </h>
 
 <hr>
 </hr>
