--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
   .mySlides {display:none;}
 </style>
 
+  <body style="background-colour:#FFFFFF;margin-left:50px;">
+</body>
     
   <!table of content>
   <table>
