--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           padding: 8px;
         }
 
-        td:nth-child(even) {
+        tr:nth-child(even) {
           background-colour: #dddddd;
         }
 
