--- a/index.html
+++ b/index.html
@@ -173,4 +173,10 @@ classifier confidence to drop, as in Vlachos (2008).”
     Campbell, C, Cristianini, N and Smola, A (2000), Query learning with large margin classifiers.
     In: Proc. 17th Internat. Conf.on Machine Learning. Morgan Kaufman, Stanford, CA, 111-118
   </pre>
+
+
+  <hr>
+  <h3>H3 Worksheet</h3>
+  </hr>
+  
 </html>
