--- a/index.html
+++ b/index.html
@@ -182,8 +182,7 @@ classifier confidence to drop, as in Vlachos (2008).”
   <script>
     //Javascript to display the date and time on my webpage
 
-    const d = new Date();
-    document.getElementByld("date&time").innerHTML = d;
+    document.getElementByld("date&time").innerHTML = Date();
   </script>
   
   <p id="date&time"></p>
