--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ classifier confidence to drop, as in Vlachos (2008).”
   <h3>H3 Worksheet</h3>
   </hr>
 
-  <h2>
+  <h2>Test</h2>
     <p id="date&time"></p>
     <script>
     //Javascript to display the date and time on my webpage
@@ -187,7 +187,7 @@ classifier confidence to drop, as in Vlachos (2008).”
     document.getElementByld("date&time").innerHTML = Date();
     </script>
   
-  </h2>
+  
 
 
   
