--- a/index.html
+++ b/index.html
@@ -179,14 +179,18 @@ classifier confidence to drop, as in Vlachos (2008).”
   <h3>H3 Worksheet</h3>
   </hr>
 
-  <head>
-    <p id="date&time"></p>
+  <body>
+
+
+    <p id="demo"></p>
     <script>
-    //Javascript to display the date and time on my webpage
-    const d = new Date();
-    document.getElementByld("date&time").innerHTML = d;
+
+    document.getElementById('demo').innerHTML = Date()
     </script>
-  </head>
+
+
+
+  </body>
     
   
   
