--- a/index.html
+++ b/index.html
@@ -182,10 +182,10 @@ classifier confidence to drop, as in Vlachos (2008).”
   <body>
 
 
-    <p id="demo"></p>
+    <p id="dateAndTime"></p>
     <script>
-
-    document.getElementById('demo').innerHTML = Date()
+    const d = new Date();
+    document.getElementById("dateAndTime).innerHTML = d;
     </script>
 
 
