--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ classifier confidence to drop, as in Vlachos (2008).”
     <p id="dateAndTime"></p>
     <script>
     const d = newDate();
-    document.getElementById("dateAndTime).innerHTML = d;
+    document.getElementById("dateAndTime").innerHTML = d;
     </script>
 
 
