--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ classifier confidence to drop, as in Vlachos (2008).”
 
     <p id="dateAndTime"></p>
     <script>
-    const d = newDate();
+    const d = Date();
     document.getElementById("dateAndTime").innerHTML = d;
     </script>
 
