--- a/index.html
+++ b/index.html
@@ -188,8 +188,28 @@ classifier confidence to drop, as in Vlachos (2008).”
     document.getElementById("dateAndTime").innerHTML = d;
     </script>
 
+  </body>
+  <head>
+    <title>Change Button Colour</title>
+  </head>
+  <body>
+    <button id="colourButton">Click me to change colour</button>
+    <script>
+      //Get a reference to the button element
+      var button = document.getElementById("colourButton");
 
+      //Function to change the button colour
+      function changeColour(){
+        //generate a random colour (hex)
+        var randomColour = "#" + Math.floor(Math.random()*16777215).toString(16);
 
+        //set the button's background colour to the random colour
+        button.style.backgroundColor=randomColour;
+      }
+
+      //Add a click event listener to the button
+      button.addEventListener("Click",changeColour)
+    </script>
   </body>
     
   
