--- a/index.html
+++ b/index.html
@@ -189,9 +189,9 @@ classifier confidence to drop, as in Vlachos (2008).”
     </script>
 
   </body>
-  <head>
-    <title>Change Button Colour</title>
-  </head>
+  
+  <h3>Change Button Colour</h3>
+  
   <body>
     <button id="colourButton">Click me to change colour</button>
     <script>
