--- a/index.html
+++ b/index.html
@@ -199,16 +199,16 @@ classifier confidence to drop, as in Vlachos (2008).”
       var button = document.getElementById("colourButton");
 
       //Function to change the button colour
-      function changeColour(){
+      function changeColor(){
         //generate a random colour (hex)
-        var randomColour = "#"+Math.floor(Math.random()*16777215).toString(16);
+        var randomColor = "#"+Math.floor(Math.random()*16777215).toString(16);
 
         //set the button's background colour to the random colour
-        button.style.backgroundColor=randomColour;
+        button.style.backgroundColor=randomColor;
       }
 
       //Add a click event listener to the button
-      button.addEventListener("Click",changeColour)
+      button.addEventListener("Click",changeColor)
     </script>
   </body>
     
