--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@ Table 1 and Figure 1 both show the increase in literature of virtual reality in 
         <div class="table">
           <pre><p>Table 1 <a href="#[2]">[2]</a> : Table cited from Cipresso, Giglioli, Mariano and 
 Guiseppe’s article (2018) on Virtual and Augmented Reality research.</p></pre>
+<pre><p>Category statistics from the WoS for the entire period and the last 5 years.</p></pre>
             <table>
     
     <tr>
