--- a/index.html
+++ b/index.html
@@ -286,9 +286,9 @@ Geography or Hospitality.</pre></p>
 </hr>
   <pre>
 <p id="[1]">[1] Barker, P., 1993. Virtual Reality: theoretical basis, practical applications. 
-    ALT-J, 1(1), pp.15-25. Available at: https://doi.org/10.3402/rlt.v1i1.9463 [accessed on 30.10.23]</p>  
+    ALT-J, 1(1), pp.15-25. Available at: <a href="https://doi.org/10.3402/rlt.v1i1.9463"> https://doi.org/10.3402/rlt.v1i1.9463</a> [accessed on 30.10.23]</p>  
 <p id="[2]">[2] Cipresso, P and Giglioli, I.A.C, Raya, M.A, Riva, G. (2018) 
     'The Past, Present, and Future of Virtual and Augmented Reality Research: A Network and Cluster Analysis of the Literature', 
-    Frontiers in Psychology, Volume 9. Available at: https://doi.org/10.3389/fpsyg.2018.02086  [accessed on 31.10.23]</p> 
+    Frontiers in Psychology, Volume 9. Available at: <a href="https://doi.org/10.3389/fpsyg.2018.02086"> https://doi.org/10.3389/fpsyg.2018.02086</a>[accessed on 31.10.23]</p> 
   </pre>
 </html>
