--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
   </HEAD>
 
 
-  <body style="background-colour:#FFFFFF;margin-left:50px;">
+  <body style="background-colour:#FFFFFF;
+    margin-left:50px;
+    font-family: arial">
 </body>
     
   <!table of content>
