--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
         width: 50%;
       }
     </style>
+
+    <style>
+      pre {
+        font-family: arial;
+      }
+      </style>
     
     <!style for tables>
       <style>
