--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
     <h3 id="Abstract">Abstract</h3>
   </hr>
   
-  <p class="ex1">
-    <pre>
-     Input here
-    </pre>
-</p>
+  <p class="ex1"><pre>Virtual Reality is well known for its use in gaming and other forms of recreational activities, 
+  and if it is not being used for personal enjoyment, it is typically linked to stereotypical STEM related fields of occupation. 
+  However, while virtual reality might have a predominant use within the fields of computer science and other STEM related subjects, 
+  there are, in fact, other uses for it outside of these areas. As technology advances, more and more research is going into the potential 
+  applications of virtual reality, leading to an increase in papers on the topic along with more experiments being performed on its uses.</pre></p>
 
    <hr>
     <h2 id="What is Virtual Reality?">What is Virtual Reality?</h2>
