--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
 
     <style>
       pre {
-        font-family: arial;
+        font-family: georgia;
       }
       </style>
     
     <!style for tables>
       <style>
         table {
-          font-family: arial, sans-serif;
+          font-family: Georgia, sans-serif;
           border-collapse: collapse;
           width: 80%;
 
@@ -72,7 +72,7 @@
 
   <body style="background-colour:#FFFFFF;
     margin-left:50px;
-    font-family: arial">
+    font-family: Times New Roman">
 </body>
     
   <!table of content>
