--- a/index.html
+++ b/index.html
@@ -108,14 +108,14 @@
   </body>
 
   <hr>
-    <h3 id="Abstract">Abstract</h3>
+    <h2 id="Abstract">Abstract</h2>
   </hr>
   
   <p class="ex1"><pre>Virtual Reality is well known for its use in gaming and other forms of recreational activities, 
-  and if it is not being used for personal enjoyment, it is typically linked to stereotypical STEM related fields of occupation. 
-  However, while virtual reality might have a predominant use within the fields of computer science and other STEM related subjects, 
-  there are, in fact, other uses for it outside of these areas. As technology advances, more and more research is going into the potential 
-  applications of virtual reality, leading to an increase in papers on the topic along with more experiments being performed on its uses.</pre></p>
+and if it is not being used for personal enjoyment, it is typically linked to stereotypical STEM related fields of occupation. 
+However, while virtual reality might have a predominant use within the fields of computer science and other STEM related subjects, 
+there are, in fact, other uses for it outside of these areas. As technology advances, more and more research is going into the potential 
+applications of virtual reality, leading to an increase in papers on the topic along with more experiments being performed on its uses.</pre></p>
 
    <hr>
     <h2 id="What is Virtual Reality?">What is Virtual Reality?</h2>
@@ -124,7 +124,7 @@
   <p class="ex2">
     <pre>
       
-Barker’s article (1993)<a href="#[1]">[1]</a>  defined Virtual Reality as: 
+Barker’s article (1993)<a href="#[1]"><sup>[1]</sup></a>  defined Virtual Reality as: 
 
 “A VR system is a sophisticated multimedia environment in which users are exposed to, and can participate in,
 surrogate tacto-audio-visual experiences. These experiences are created by means of a computer system to which are 
@@ -154,7 +154,7 @@ Table 1 and Figure 1 both show the increase in literature of virtual reality in 
   <body>
     <div class="container">
         <div class="table">
-          <pre><p>Table 1 <a href="#[2]">[2]</a> : Table cited from Cipresso, Giglioli, Mariano and 
+          <pre><p>Table 1 <a href="#[2]"><sup>[2]</sup></a> : Table cited from Cipresso, Giglioli, Mariano and 
 Guiseppe’s article (2018) on Virtual and Augmented Reality research.</p></pre>
 <pre><p>Category statistics from the WoS for the entire period and the last 5 years.</p></pre>
             <table>
@@ -274,7 +274,7 @@ Guiseppe’s article (2018) on Virtual and Augmented Reality research.</p></pre>
   </table>
         </div>
         <div class="image">
-          <pre><p>  Figure 1 <a href="#[2]">[2]</a> : Figure cited from Cipresso, Giglioli, 
+          <pre><p>  Figure 1 <a href="#[2]"><sup>[2]</sup></a> : Figure cited from Cipresso, Giglioli, 
   Mariano and Guiseppe’s article (2018) on Virtual 
   and Augmented Reality research.</p></pre>
             <img src="figureone.png" alt="Figure One">
