--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <h1><b> Applications of Virtual Reality beyond recreational activities </b></h1>
     
     <style>
+      .noLine {
+        text-decoration: none;
+}
         .container {
             display: flex;
             flex-wrap: wrap;
@@ -124,7 +127,7 @@ applications of virtual reality, leading to an increase in papers on the topic a
   <p class="ex2">
     <pre>
       
-Barker’s article (1993)<a href="#[1]"><sup>[1]</sup></a>  defined Virtual Reality as: 
+Barker’s article (1993)<a href="#[1]" class="noLine"><sup>[1]</sup></a>  defined Virtual Reality as: 
 
 “A VR system is a sophisticated multimedia environment in which users are exposed to, and can participate in,
 surrogate tacto-audio-visual experiences. These experiences are created by means of a computer system to which are 
@@ -154,7 +157,7 @@ Table 1 and Figure 1 both show the increase in literature of virtual reality in 
   <body>
     <div class="container">
         <div class="table">
-          <pre><p>Table 1 <a href="#[2]"><sup>[2]</sup></a> : Table cited from Cipresso, Giglioli, Mariano and 
+          <pre><p>Table 1 <a href="#[2]" class="noLine"><sup>[2]</sup></a> : Table cited from Cipresso, Giglioli, Mariano and 
 Guiseppe’s article (2018) on Virtual and Augmented Reality research.</p></pre>
 <pre><p>Category statistics from the WoS for the entire period and the last 5 years.</p></pre>
             <table>
@@ -274,7 +277,7 @@ Guiseppe’s article (2018) on Virtual and Augmented Reality research.</p></pre>
   </table>
         </div>
         <div class="image">
-          <pre><p>  Figure 1 <a href="#[2]"><sup>[2]</sup></a> : Figure cited from Cipresso, Giglioli, 
+          <pre><p>  Figure 1 <a href="#[2]" class="noLine"><sup>[2]</sup></a> : Figure cited from Cipresso, Giglioli, 
   Mariano and Guiseppe’s article (2018) on Virtual 
   and Augmented Reality research.</p></pre>
             <img src="figureone.png" alt="Figure One">
