--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
     <tr>
       <td><a href="#References">References</a></td>
     </tr>
+    <tr>
+      <td><a href="#Example One of a practical application of Virtual Reality">Example One of a practical application of Virtual Reality</a></td>
+    </tr>
   </table>
         </div>
       <div class="image">
@@ -291,7 +294,25 @@ however one can see that along the edges of the word map other fields such as:
 Geography or Hospitality.</pre></p>
           </div>
     </div>
-  </body>  
+  </body>
+
+  <hr>
+    <h2 id="Example One of a practical application of Virtual Reality">Example One of a practical application of Virtual Realit</h2>
+  </hr>
+  <pre>Hutabarat, Oyekan, Turner, Tiwari, Prajapat, Gan and Waller’s (2016) paper
+talks about a practical use of virtual reality in being able to improve the simulation
+capabilities in the field of manufacturing and smart decision making. The paper opens
+with a breakdown of the different components that they would need to make this
+possible, and about how with recent advancements in technology the price of some
+necessary equipment has fallen. This would therefore mean that one of the limiting
+factors that prevents a lot of technological advancements, a lack of affordable parts,
+would no longer be as big of an issue.
+
+The table below from Hutabarat, Oyekan, Turner, Tiwari, Prajapat, Gan and Waller’s
+(2016)  paper compares different components that they could use and the affordability
+of them. Not just that of monetary expenditure but also potential advancements and
+ability to fit the unique criteria required.</pre>
+  
 <hr>
   <h2 id="References">References</h2>
 </hr>
