--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
   </table>
         </div>
       <div class="image">
-        <img src="vrimg.jpg" alt="Figure One">        
+        <img src="Img1ConfProj.avif" alt="Figure One">        
       </div>
     </div>
   </body>
