--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
         justify-content: center;
         width: 50%;
       }
+      .text{
+        width:50%;
+      }
     </style>
 
     <style>
@@ -295,7 +298,8 @@ Geography or Hospitality.</pre></p>
           </div>
     </div>
   </body>
-
+<div class ="container">
+  <div class="text">
   <hr>
     <h2 id="Example One of a practical application of Virtual Reality">Example One of a practical application of Virtual Realit</h2>
   </hr>
@@ -312,7 +316,11 @@ The table below from Hutabarat, Oyekan, Turner, Tiwari, Prajapat, Gan and Waller
 (2016)  paper compares different components that they could use and the affordability
 of them. Not just that of monetary expenditure but also potential advancements and
 ability to fit the unique criteria required.</pre>
-  
+</div>
+  <div class ="image">
+    <img src="figureTwo.png" alt="Figure Two">
+  </div>
+</div>
 <hr>
   <h2 id="References">References</h2>
 </hr>
