--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
             width: 50%;
             text-align: left;
         }
+
+      .imageTwo {
+        width: 38%
+      }
         
         .image img {
             max-width: 100%;
@@ -31,7 +35,7 @@
         width: 50%;
       }
       .text{
-        width:50%;
+        width:62%;
       }
     </style>
 
@@ -317,7 +321,7 @@ The table below from Hutabarat, Oyekan, Turner, Tiwari, Prajapat, Gan and Waller
 of them. Not just that of monetary expenditure but also potential advancements and
 ability to fit the unique criteria required.</pre>
 </div>
-  <div class ="image">
+  <div class ="imageTwo">
     <img src="figureTwo.png" alt="Figure Two">
   </div>
 </div>
