--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         }
 
       .imageTwo {
-        width: 38%
+        width: 38%;
+        text-align: left;
       }
         
         .image img {
@@ -36,6 +37,7 @@
       }
       .text{
         width:62%;
+        text-align: left;
       }
     </style>
 
