--- a/index.html
+++ b/index.html
@@ -324,6 +324,7 @@ of them. Not just that of monetary expenditure but also potential advancements a
 ability to fit the unique criteria required.</pre>
 </div>
   <div class ="imageTwo">
+    <pre> </pre>
     <img src="figureTwo.png" alt="Figure Two">
   </div>
 </div>
