--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         width: 50%;
       }
       .text{
-        width:62%;
+        width:58%;
         text-align: left;
       }
     </style>
@@ -324,7 +324,39 @@ of them. Not just that of monetary expenditure but also potential advancements a
 ability to fit the unique criteria required.</pre>
 </div>
   <div class ="imageTwo">
-    <pre> </pre>
+     <table>
+    <tr>
+      <th><b>A/B</b></th>
+      <th><b>A to B affordances</b></th>
+      <th><b>B to A affordances</b></th>
+    </tr>
+    <tr>
+      <td>DES/VR</td>
+      <td>New methods to visualize the complexity of shop floor behavior</td>
+      <td>Novel DES authoring approaches</td>
+    </tr>
+    <tr>
+      <td>DES/RGBD</td>
+      <td>Automated machine vision setup</td>
+      <td>Automated update of events</td>
+    </tr>
+    <tr>
+      <td>RGBD/VR</td>
+      <td>Real-time updates of workspace changes</td>
+      <td>Immersive visualization of workspaces</td>
+    </tr>
+     </table>
+  </div>
+</div>
+  <div class="container">
+    <div class="table">
+      <pre>Dai (2023)’s paper examines the idea of using virtual reality in teaching to
+    help with student engagement and learning capabilities. This paper explores the
+    addition of virtual reality to the teaching of dangerous goods at a police academy. </pre>
+      
+    </div>
+    <div class="image">
+    <pre>  </pre>
     <img src="figureTwo.png" alt="Figure Two">
   </div>
 </div>
