--- a/index.html
+++ b/index.html
@@ -109,10 +109,13 @@
       <td><a href="#What does this increase in literary articles mean?">What does this increase in literary articles mean?</a></td>
     </tr>
     <tr>
-      <td><a href="#References">References</a></td>
-    </tr>
-    <tr>
       <td><a href="#Example One of a practical application of Virtual Reality">Example One of a practical application of Virtual Reality</a></td>
+    </tr>
+     <tr>
+      <td><a href="#Example Two of practical application of Virtual Reality">Example Two of practical application of Virtual Reality</a></td>
+    </tr>
+     <tr>
+      <td><a href="#References">References</a></td>
     </tr>
   </table>
         </div>
@@ -305,7 +308,7 @@ Geography or Hospitality.</pre></p>
     </div>
   </body>
 <div class ="container">
-  <div class="text">
+  <div class="table">
   <hr>
     <h2 id="Example One of a practical application of Virtual Reality">Example One of a practical application of Virtual Realit</h2>
   </hr>
@@ -323,7 +326,8 @@ The table below from Hutabarat, Oyekan, Turner, Tiwari, Prajapat, Gan and Waller
 of them. Not just that of monetary expenditure but also potential advancements and
 ability to fit the unique criteria required.</pre>
 </div>
-  <div class ="imageTwo">
+  <div class ="table">
+    <pre> </pre>
      <table>
     <tr>
       <th><b>A/B</b></th>
@@ -348,6 +352,9 @@ ability to fit the unique criteria required.</pre>
      </table>
   </div>
 </div>
+
+  <h2 id="Example Two of practical application of Virtual Reality">Example Two of practical application of Virtual Reality</h2>
+  
   <div class="container">
     <div class="table">
       <pre>Dai (2023)’s paper examines the idea of using virtual reality in teaching to
