--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         
         .table {
             width: 40%;
+          text-align:right;
+          justify-content: right;
         }
         
         .image {
