--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         
         .table {
             width: 50%;
+          margin-left: 250px;
         }
         
         .image {
@@ -52,7 +53,7 @@
         table {
           font-family: Georgia, sans-serif;
           border-collapse: collapse;
-          width: 70%;
+          width: 80%;
 
         }
 
