--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         
         .table {
             width: 50%;
-          margin-left: 30px;
+          margin-left: 10px;
         }
         
         .image {
@@ -311,7 +311,7 @@ Geography or Hospitality.</pre></p>
 <div class ="container">
   <div class="image">
   <hr>
-    <h2 id="Example One of a practical application of Virtual Reality">Example One of a practical application of Virtual Realit</h2>
+    <h2 id="Example One of a practical application of Virtual Reality">Example One of a practical application of Virtual Reality</h2>
   </hr>
   <pre>Hutabarat, Oyekan, Turner, Tiwari, Prajapat, Gan and Waller’s (2016) paper            
 talks about a practical use of virtual reality in being able to improve the          
