--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
         
         .table {
             width: 50%;
-          margin-left: 10px;
         }
         
         .image {
@@ -323,9 +322,9 @@ of the limiting factors that prevents a lot of technological advancements, a lac
 of affordable parts, would no longer be as big of an issue.          
 
 The table below from Hutabarat, Oyekan, Turner, Tiwari, Prajapat, Gan and Waller’s          
-(2016)  paper compares different components that they could use and the affordability          
-of them. Not just that of monetary expenditure but also potential advancements and          
-ability to fit the unique criteria required.</pre>
+(2016)  paper compares different components that they could use and the
+affordability of them. Not just that of monetary expenditure but also potential
+advancements and ability to fit the unique criteria required.</pre>
 </div>
   <div class ="table">
     <pre> </pre>
