--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
         .table {
             width: 50%;
         }
+      .tabletwo{
+        width: 45%;
+      }
+      .space{
+        width: 5%;
+      }
         
         .image {
             width: 50%;
@@ -36,7 +42,7 @@
         width: 50%;
       }
       .text{
-        width:60%;
+        width:50%;
         text-align: left;
       }
     </style>
@@ -308,7 +314,7 @@ Geography or Hospitality.</pre></p>
     </div>
   </body>
 <div class ="container">
-  <div class="image">
+  <div class="text">
   <hr>
     <h2 id="Example One of a practical application of Virtual Reality">Example One of a practical application of Virtual Reality</h2>
   </hr>
@@ -327,7 +333,12 @@ use and the affordability of them. Not just that of monetary expenditure
 but also potential advancements and ability to fit the unique criteria
 required.</pre>
 </div>
-  <div class ="table">
+  <div class="space">
+    <pre>
+      
+    </pre>
+  </div>
+  <div class ="tabletwo">
     <pre> </pre>
      <table>
     <tr>
