--- a/index.html
+++ b/index.html
@@ -366,16 +366,69 @@ required.</pre>
 </div>
 
   <h2 id="Example Two of practical application of Virtual Reality">Example Two of practical application of Virtual Reality</h2>
-  
   <div class="container">
     <div class="table">
-      <pre>Dai (2023)’s paper examines the idea of using virtual reality in teaching to
-    help with student engagement and learning capabilities. This paper explores the
-    addition of virtual reality to the teaching of dangerous goods at a police academy. </pre>
+      <pre>Table 3, cited from Dai (2023) on Application of Virtual Reality Technology in
+  Practical Teaching in the Police Academy, shows the increase of  student satisfaction
+  across a variety of characteristics in teaching.</pre>
+
+      <table>
+    <tr>
+      <th><b>Questions</b></th>
+      <th><b>Experimental Group</b></th>
+      <th><b>Control Group</b></th>
+    </tr>
+    <tr>
+      <td>1. This way of teaching makes learning more efficient</td>
+      <td>92.3%</td>
+      <td>82.5%</td>
+    </tr>
+    <tr>
+      <td>2. It is able to increase understanding of DG</td>
+      <td>87.2%</td>
+      <td>75%</td>
+    </tr>
+    <tr>
+      <td>3. It is able to grasp concentration for learning</td>
+      <td>89.7%</td>
+      <td>62.5%</td>
+    </tr>
+    <tr>
+      <td>4. It is able to help deepen understanding of the knowledge taught</td>
+      <td>97.4%</td>
+      <td>72.5%</td>
+    </tr>
+    <tr>
+      <td>5. It is able to discuss with the teacher timely</td>
+      <td>84.6%</td>
+      <td>90%</td>
+    </tr>
+    <tr>
+      <td>6. It is able to be inspired and motivated to study</td>
+      <td>94.8%</td>
+      <td>85%</td>
+    </tr>
+    <tr>
+      <td>7. It is able to be satisfied with this way of teaching</td>
+      <td>92.3%</td>
+      <td>75%</td>
+    </tr>
+     </table>
       
     </div>
     <div class="image">
+            <pre>Dai (2023)’s paper examines the idea of using virtual reality in teaching to
+  help with student engagement and learning capabilities. This paper explores the
+  addition of virtual reality to the teaching of dangerous goods at a police academy. </pre>
+
     <img src="figureTwo.png" alt="Figure Two">
+      <pre>Figure 2, cited from Dai (2023) on Application of Virtual Reality Technology in Practical
+  Teaching in the Police Academy, show the Dangerous Goods (DG) Identification system</pre>
+
+      <pre>This paper represents a clear indication of a practical use of virtual reality which has
+  visibility positive effects in an academic environment. This therefore shows just how virtual reality
+  has little in the way of limitations on it’s uses beyond that of recreational activities, other than
+  our own creativity in acknowledging and taking advantage of this rapidly evolving piece of technology.</pre>
   </div>
 </div>
 <hr>
