--- a/index.html
+++ b/index.html
@@ -368,9 +368,11 @@ required.</pre>
   <h2 id="Example Two of practical application of Virtual Reality">Example Two of practical application of Virtual Reality</h2>
   <div class="container">
     <div class="table">
-      <pre>Table 3, cited from Dai (2023) on Application of Virtual Reality Technology in
-  Practical Teaching in the Police Academy, shows the increase of  student satisfaction
-  across a variety of characteristics in teaching.</pre>
+      <pre>
+  Table 3, cited from Dai (2023) on Application of Virtual Reality Technology in
+  Practical Teaching in the Police Academy, shows the increase of student
+  satisfaction across a variety of characteristics in teaching.
+      </pre>
 
       <table>
     <tr>
@@ -417,18 +419,20 @@ required.</pre>
       
     </div>
     <div class="image">
-            <pre>Dai (2023)’s paper examines the idea of using virtual reality in teaching to
+            <pre>
+  Dai (2023)’s paper examines the idea of using virtual reality in teaching to
   help with student engagement and learning capabilities. This paper explores the
   addition of virtual reality to the teaching of dangerous goods at a police academy. </pre>
 
     <img src="figureTwo.png" alt="Figure Two">
-      <pre>Figure 2, cited from Dai (2023) on Application of Virtual Reality Technology in Practical
-  Teaching in the Police Academy, show the Dangerous Goods (DG) Identification system</pre>
+      <pre>Figure 2, cited from Dai (2023) on Application of Virtual Reality Technology in
+  Practical Teaching in the Police Academy, show the Dangerous Goods (DG) Identification system</pre>
 
-      <pre>This paper represents a clear indication of a practical use of virtual reality which has
-  visibility positive effects in an academic environment. This therefore shows just how virtual reality
-  has little in the way of limitations on it’s uses beyond that of recreational activities, other than
-  our own creativity in acknowledging and taking advantage of this rapidly evolving piece of technology.</pre>
+      <pre>This paper represents a clear indication of a practical use of virtual reality
+  which has visibility positive effects in an academic environment. This therefore shows just
+  how virtual reality has little in the way of limitations on it’s uses beyond that of
+  recreational activities, other than our own creativity in acknowledging and taking advantage
+  of this rapidly evolving piece of technology.</pre>
   </div>
 </div>
 <hr>
