--- a/index.html
+++ b/index.html
@@ -425,14 +425,19 @@ required.</pre>
   addition of virtual reality to the teaching of dangerous goods at a police academy. </pre>
 
     <img src="figureTwo.png" alt="Figure Two">
-      <pre>Figure 2, cited from Dai (2023) on Application of Virtual Reality Technology in
-  Practical Teaching in the Police Academy, show the Dangerous Goods (DG) Identification system</pre>
+      <pre>
+  Figure 2, cited from Dai (2023) on Application of Virtual Reality Technology in
+  Practical Teaching in the Police Academy, show the Dangerous Goods (DG)
+  Identification system
+      </pre>
 
-      <pre>This paper represents a clear indication of a practical use of virtual reality
-  which has visibility positive effects in an academic environment. This therefore shows just
-  how virtual reality has little in the way of limitations on it’s uses beyond that of
-  recreational activities, other than our own creativity in acknowledging and taking advantage
-  of this rapidly evolving piece of technology.</pre>
+      <pre>
+  This paper represents a clear indication of a practical use of virtual reality
+  which has visibility positive effects in an academic environment. This therefore shows
+  just how virtual reality has little in the way of limitations on it’s uses beyond that
+  of recreational activities, other than our own creativity in acknowledging and taking
+  advantage of this rapidly evolving piece of technology.
+      </pre>
   </div>
 </div>
 <hr>
