--- a/index.html
+++ b/index.html
@@ -369,9 +369,11 @@ required.</pre>
   <div class="container">
     <div class="table">
       <pre>
+        
   Table 3, cited from Dai (2023) on Application of Virtual Reality Technology in
   Practical Teaching in the Police Academy, shows the increase of student
   satisfaction across a variety of characteristics in teaching.
+        
       </pre>
 
       <table>
@@ -433,10 +435,10 @@ required.</pre>
 
       <pre>
   This paper represents a clear indication of a practical use of virtual reality
-  which has visibility positive effects in an academic environment. This therefore shows
-  just how virtual reality has little in the way of limitations on it’s uses beyond that
-  of recreational activities, other than our own creativity in acknowledging and taking
-  advantage of this rapidly evolving piece of technology.
+  which has visibility positive effects in an academic environment. This therefore
+  shows just how virtual reality has little in the way of limitations on it’s uses
+  beyond that of recreational activities, other than our own creativity in
+  acknowledging and taking advantage of this rapidly evolving piece of technology.
       </pre>
   </div>
 </div>
