--- a/index.html
+++ b/index.html
@@ -368,8 +368,7 @@ required.</pre>
   <h2 id="Example Two of practical application of Virtual Reality">Example Two of practical application of Virtual Reality</h2>
   <div class="container">
     <div class="table">
-      <pre>
-        
+      <pre>   
   Table 3, cited from Dai (2023) on Application of Virtual Reality Technology in
   Practical Teaching in the Police Academy, shows the increase of student
   satisfaction across a variety of characteristics in teaching.
@@ -451,5 +450,10 @@ required.</pre>
 <p id="[2]">[2] Cipresso, P and Giglioli, I.A.C, Raya, M.A, Riva, G. (2018) 
     'The Past, Present, and Future of Virtual and Augmented Reality Research: A Network and Cluster Analysis of the Literature', 
     Frontiers in Psychology, Volume 9. Available at: <a href="https://doi.org/10.3389/fpsyg.2018.02086"> https://doi.org/10.3389/fpsyg.2018.02086</a>[accessed on 31.10.23]</p> 
+<p id="[3]">[3] Hutabarat, W., Oyekan, J., Turner, C., Tiwari, A., Prajapat, N., Gan, X.P. and Waller, A., 2016, December.
+  Combining virtual reality enabled simulation with 3D scanning technologies towards smart manufacturing.
+  In 2016 winter simulation conference (WSC) (pp. 2774-2785). IEEE. Available at:<a href="https://doi.org/10.1109/WSC.2016.7822314"> https://doi.org/10.1109/WSC.2016.7822314</a>[accessed on 1.12.23]</p> 
+<p id="[4]">[4]Dai, Q. 2023, Research on the Application of Virtual Reality Technology in Practical Teaching in the Police Academy
+  -- With the Identification of Dangerous Goods as an Example, EDP Sciences, Les Ulis. Available at:<a href="https://doi.org/10.1051/shsconf/202315701004"> https://doi.org/10.1051/shsconf/202315701004</a> [accessed on 1.12.23]</p>
   </pre>
 </html>
