--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@ Geography or Hospitality.</pre></p>
   <hr>
     <h2 id="Example One of a practical application of Virtual Reality">Example One of a practical application of Virtual Reality</h2>
   </hr>
-  <pre>Hutabarat, Oyekan, Turner, Tiwari, Prajapat, Gan and Waller’s (2016) paper            
+  <pre>Hutabarat, Oyekan, Turner, Tiwari, Prajapat, Gan and Waller’s (2016) <a href="#[3]" class="noLine"><sup>[3]</sup></a>paper            
 talks about a practical use of virtual reality in being able to improve the          
 simulation capabilities in the field of manufacturing and smart decision making.          
 The paper opens with a breakdown of the different components that they would
@@ -328,7 +328,7 @@ mean that one of the limiting factors that prevents a lot of technological
 advancements, a lack of affordable parts, would no longer be as big of an issue.          
 
 The table below from Hutabarat, Oyekan, Turner, Tiwari, Prajapat, Gan
-and Waller’s (2016)  paper compares different components that they could
+and Waller’s (2016)<a href="#[3]" class="noLine"><sup>[3]</sup></a> paper compares different components that they could
 use and the affordability of them. Not just that of monetary expenditure
 but also potential advancements and ability to fit the unique criteria
 required.</pre>
@@ -369,7 +369,7 @@ required.</pre>
   <div class="container">
     <div class="table">
       <pre>   
-  Table 3, cited from Dai (2023) on Application of Virtual Reality Technology in
+  Table 3, cited from Dai (2023)<a href="#[4]" class="noLine"><sup>[4]</sup></a> on Application of Virtual Reality Technology in
   Practical Teaching in the Police Academy, shows the increase of student
   satisfaction across a variety of characteristics in teaching.
         
@@ -421,13 +421,13 @@ required.</pre>
     </div>
     <div class="image">
             <pre>
-  Dai (2023)’s paper examines the idea of using virtual reality in teaching to
+  Dai (2023)’s<a href="#[4]" class="noLine"><sup>[4]</sup></a> paper examines the idea of using virtual reality in teaching to
   help with student engagement and learning capabilities. This paper explores the
   addition of virtual reality to the teaching of dangerous goods at a police academy. </pre>
 
     <img src="figureTwo.png" alt="Figure Two">
       <pre>
-  Figure 2, cited from Dai (2023) on Application of Virtual Reality Technology in
+  Figure 2, cited from Dai (2023)<a href="#[4]" class="noLine"><sup>[4]</sup></a> on Application of Virtual Reality Technology in
   Practical Teaching in the Police Academy, show the Dangerous Goods (DG)
   Identification system
       </pre>
