--- a/index.html
+++ b/index.html
@@ -310,6 +310,7 @@ new ways of utilizing this ever evolving technology. According to Figure 1,
 virtual reality is still most commonly being researched in STEM related fields,
 however one can see that along the edges of the word map other fields such as: 
 Geography or Hospitality.</pre></p>
+          <img src="Img2ConfProj.avif" alt="Image Two">
           </div>
     </div>
   </body>
@@ -327,7 +328,7 @@ technology the price of some necessary equipment has fallen. This would therefor
 mean that one of the limiting factors that prevents a lot of technological
 advancements, a lack of affordable parts, would no longer be as big of an issue.          
 
-The table below from Hutabarat, Oyekan, Turner, Tiwari, Prajapat, Gan
+The table from Hutabarat, Oyekan, Turner, Tiwari, Prajapat, Gan
 and Waller’s (2016)<a href="#[3]" class="noLine"><sup>[3]</sup></a> paper compares different components that they could
 use and the affordability of them. Not just that of monetary expenditure
 but also potential advancements and ability to fit the unique criteria
@@ -446,14 +447,14 @@ required.</pre>
 </hr>
   <pre>
 <p id="[1]">[1] Barker, P., 1993. Virtual Reality: theoretical basis, practical applications. 
-    ALT-J, 1(1), pp.15-25. Available at: <a href="https://doi.org/10.3402/rlt.v1i1.9463"> https://doi.org/10.3402/rlt.v1i1.9463</a> [accessed on 30.10.23]</p>  
+    ALT-J, 1(1), pp.15-25. Available at: <a href="https://doi.org/10.3402/rlt.v1i1.9463"> https://doi.org/10.3402/rlt.v1i1.9463</a>[accessed on 30.10.23]</p>  
 <p id="[2]">[2] Cipresso, P and Giglioli, I.A.C, Raya, M.A, Riva, G. (2018) 
     'The Past, Present, and Future of Virtual and Augmented Reality Research: A Network and Cluster Analysis of the Literature', 
-    Frontiers in Psychology, Volume 9. Available at: <a href="https://doi.org/10.3389/fpsyg.2018.02086"> https://doi.org/10.3389/fpsyg.2018.02086</a>[accessed on 31.10.23]</p> 
+    Frontiers in Psychology, Volume 9. Available at: <a href="https://doi.org/10.3389/fpsyg.2018.02086">https://doi.org/10.3389/fpsyg.2018.02086</a>[accessed on 31.10.23]</p> 
 <p id="[3]">[3] Hutabarat, W., Oyekan, J., Turner, C., Tiwari, A., Prajapat, N., Gan, X.P. and Waller, A., 2016, December.
   Combining virtual reality enabled simulation with 3D scanning technologies towards smart manufacturing.
-  In 2016 winter simulation conference (WSC) (pp. 2774-2785). IEEE. Available at:<a href="https://doi.org/10.1109/WSC.2016.7822314"> https://doi.org/10.1109/WSC.2016.7822314</a>[accessed on 1.12.23]</p> 
+  In 2016 winter simulation conference (WSC) (pp. 2774-2785). IEEE. Available at:<a href="https://doi.org/10.1109/WSC.2016.7822314">https://doi.org/10.1109/WSC.2016.7822314</a>[accessed on 1.12.23]</p> 
 <p id="[4]">[4]Dai, Q. 2023, Research on the Application of Virtual Reality Technology in Practical Teaching in the Police Academy
-  -- With the Identification of Dangerous Goods as an Example, EDP Sciences, Les Ulis. Available at:<a href="https://doi.org/10.1051/shsconf/202315701004"> https://doi.org/10.1051/shsconf/202315701004</a> [accessed on 1.12.23]</p>
+  -With the Identification of Dangerous Goods as an Example, EDP Sciences, Les Ulis. Available at:<a href="https://doi.org/10.1051/shsconf/202315701004">https://doi.org/10.1051/shsconf/202315701004</a> [accessed on 1.12.23]</p>
   </pre>
 </html>
