--- a/index.html
+++ b/index.html
@@ -309,7 +309,8 @@ emergence of various new applications in the field, or at least research into
 new ways of utilizing this ever evolving technology. According to Figure 1,
 virtual reality is still most commonly being researched in STEM related fields,
 however one can see that along the edges of the word map other fields such as: 
-Geography or Hospitality.</pre></p>
+Geography or Hospitality.
+          </pre></p>
           <img src="Img2ConfProj.avif" alt="Image Two">
           </div>
     </div>
@@ -454,7 +455,7 @@ required.</pre>
 <p id="[3]">[3] Hutabarat, W., Oyekan, J., Turner, C., Tiwari, A., Prajapat, N., Gan, X.P. and Waller, A., 2016, December.
   Combining virtual reality enabled simulation with 3D scanning technologies towards smart manufacturing.
   In 2016 winter simulation conference (WSC) (pp. 2774-2785). IEEE. Available at:<a href="https://doi.org/10.1109/WSC.2016.7822314">https://doi.org/10.1109/WSC.2016.7822314</a>[accessed on 1.12.23]</p> 
-<p id="[4]">[4]Dai, Q. 2023, Research on the Application of Virtual Reality Technology in Practical Teaching in the Police Academy
-  -With the Identification of Dangerous Goods as an Example, EDP Sciences, Les Ulis. Available at:<a href="https://doi.org/10.1051/shsconf/202315701004">https://doi.org/10.1051/shsconf/202315701004</a> [accessed on 1.12.23]</p>
+<p id="[4]">[4]Dai, Q. 2023, Research on the Application of Virtual Reality Technology in Practical Teaching in the Police Academy-
+  With the Identification of Dangerous Goods as an Example, EDP Sciences, Les Ulis. Available at:<a href="https://doi.org/10.1051/shsconf/202315701004">https://doi.org/10.1051/shsconf/202315701004</a> [accessed on 1.12.23]</p>
   </pre>
 </html>
