--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <HEAD>
+     <img src ="WebBanner2023.png" alt="Banner" width ="1600" height = "300">
+      <h1><b>ENG0018 Computer Laboratory 2023/24</b></h1>
+      <h2> Student URN: 6803167 </h2>
     <h1><b> Applications of Virtual Reality beyond recreational activities </b></h1>
     
     <style>
