--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@ required.</pre>
     
   </div>
 
-  #slide-container {
+  .slide-container {
         text-align: center;
         position:relative;
       }
