--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@ required.</pre>
     <button class="button" onclick="showSlideNumber(5)">5</button>
     
   </div>
-
+<style>
   .slide-container {
         text-align: center;
         position:relative;
@@ -543,5 +543,5 @@ required.</pre>
         margin-bottom: -50px;
       }
   
-  
+</style>  
 </html>
