--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+e<!DOCTYPE html>
 <html>
   <HEAD>
      <img src ="WebBanner2023.png" alt="Banner" width ="1000" height = "300">
@@ -495,9 +495,8 @@ required.</pre>
 
   <div id="slide-container">
     <img id="slide" src="Slide1.png" alt="Slide 1" style="width:100%; max-width:800px;">
-  </div>
-
-  <div class ="button-container">
+    
+    <div class ="button-container">
     <button class="button" onclick="prevSlide()">Previous</button>
     <button class="button" onclick="nextSlide()">Next</button>
   </div>
@@ -510,6 +509,9 @@ required.</pre>
     <button class="button" onclick="showSlideNumber(5)">5</button>
     
   </div>
+  </div>
+
+  
 <style>
   .slide-container {
         text-align: center;
