--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-e<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <HEAD>
      <img src ="WebBanner2023.png" alt="Banner" width ="1000" height = "300">
@@ -513,7 +513,7 @@ required.</pre>
 
   
 <style>
-  .slide-container {
+  #slide-container {
         text-align: center;
         position:relative;
       }
