--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   </HEAD>
 
 
-  <body style="background-colour:#FFFFFF;
+  <body style="background-color:#FFFFFF;
     margin-left:50px;
     font-family: Times New Roman">
 </body>
@@ -471,7 +471,7 @@ required.</pre>
   var currentSlide =0;
 
   function showSlide() {
-    document.getElementByID('slide').src = slideImages[currentSlide];
+    document.getElementById('slide').src = slideImages[currentSlide];
   }
 
   function nextSlide() {
