--- a/index.html
+++ b/index.html
@@ -129,6 +129,9 @@
      <tr>
       <td><a href="#References">References</a></td>
     </tr>
+    <tr>
+      <td><a href="#Conference Project: Applications of Virtual Reality beyond recreational activities">Conference Project: Applications of Virtual Reality beyond recreational activities</td>
+    </tr>
   </table>
         </div>
       <div class="image">
@@ -465,7 +468,7 @@ required.</pre>
   of Dangerous Goods as an Example, EDP Sciences, Les Ulis. Available at:<a href="https://doi.org/10.1051/shsconf/202315701004">https://doi.org/10.1051/shsconf/202315701004</a> [accessed on 1.12.23]</p>
   </pre>
 
-  <h2><b>Conference Project: Applications of Virtual Reality beyond recreational activities</b></h2>
+   <h2 id="Conference Project: Applications of Virtual Reality beyond recreational activities">Conference Project: Applications of Virtual Reality beyond recreational activities</h2>
 <script>
   var slideImages = ["Slide1.png","Slide2.png","Slide3.png","Slide4.png","Slide5.png"];
   var currentSlide =0;
