--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       <td><a href="#References">References</a></td>
     </tr>
     <tr>
-      <td><a href="#Conference Project: Applications of Virtual Reality beyond recreational activities">Conference Project: Applications of Virtual Reality beyond recreational activities</td>
+      <td><a href="#Conference Project: Applications of Virtual Reality beyond recreational activities">Presentation</td>
     </tr>
   </table>
         </div>
